--- a/src/main/java/view/Usuario/CadastroUsuario.fxml
+++ b/src/main/java/view/Usuario/CadastroUsuario.fxml
@@ -48,7 +48,7 @@
   <children>
 <AnchorPane id="Content" minHeight="566.0" prefHeight="658.0" prefWidth="928.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
   <children>
-            <Button fx:id="btn_cadastrar" layoutX="738.0" layoutY="541.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="24.0" prefWidth="121.0" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btn_cadastrar" layoutX="722.0" layoutY="541.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="32.0" prefWidth="137.0" styleClass="btn-no-restriction" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -92,7 +92,7 @@
                </font>
             </Text>
             <ComboBox id="comb" fx:id="combo_Tipo" layoutX="391.0" layoutY="439.0" prefHeight="45.0" prefWidth="192.0" promptText="Tipo" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;" />
-            <Button layoutX="391.0" layoutY="541.0" mnemonicParsing="false" onAction="#irVisualizacaoUsuario" prefHeight="28.0" prefWidth="57.0" text="Voltar" />
+            <Button layoutX="391.0" layoutY="538.0" mnemonicParsing="false" onAction="#irVisualizacaoUsuario" prefHeight="32.0" prefWidth="137.0" styleClass="btn-no-restriction" text="Voltar" />
   </children>
 </AnchorPane>
   </children>
