--- a/src/main/java/view/FeedBack/FeedBack.fxml
+++ b/src/main/java/view/FeedBack/FeedBack.fxml
@@ -86,7 +86,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="tfFiltro" layoutX="14.0" layoutY="83.0" prefHeight="19.0" prefWidth="118.0" promptText="Filtro" />
-                        <Button fx:id="bnt_filtro" layoutX="145.0" layoutY="83.0" mnemonicParsing="false" onAction="#fltrarProjeto" text="Button" />
+                        <Button fx:id="bnt_filtro" layoutX="141.0" layoutY="82.0" maxHeight="46.0" minWidth="47.0" mnemonicParsing="false" onAction="#fltrarProjeto" prefHeight="26.0" prefWidth="52.0" styleClass="MYButton1" text="Button" />
               </children>
             </AnchorPane>
           </content>
