--- a/src/main/java/view/Menu/MenuUsuario.fxml
+++ b/src/main/java/view/Menu/MenuUsuario.fxml
@@ -44,6 +44,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MenuController">
   <children>
@@ -57,7 +58,7 @@
                      </image>
                   </ImageView>
                   <Button layoutX="28.0" layoutY="542.0" minWidth="46.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="46.0" scaleX="0.5" scaleY="0.5" styleClass="rp-column" text="Button" />
-                  <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="36.0" layoutY="541.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="36.0" layoutY="541.0" onMouseClicked="#irLogin" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../figma/log.png" />
                      </image>
@@ -67,67 +68,30 @@
           <content>
             <AnchorPane id="Content" prefHeight="544.0" prefWidth="921.0" styleClass="content">
               <children>
-                        <Group layoutX="41.0" layoutY="193.0" onMouseClicked="#irFeedBackHora" AnchorPane.leftAnchor="41.0">
+                             <Group layoutX="123.0" layoutY="203.0" onMouseClicked="#irLancamentoHora" AnchorPane.leftAnchor="123.0">
+                           <children>
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
+                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/Grafico.png" />
+                                 </image>
+                              </ImageView>
+                              <Label layoutX="18.0" layoutY="76.0" text="Lançamento de hora" textFill="#1f25c1">
+                                 <font>
+                                    <Font name="Verdana Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
                            <effect>
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
                            </effect>
                         </Group>
-                        <Label fx:id="homeText" layoutX="358.0" layoutY="35.0" prefHeight="28.0" prefWidth="172.0" styleClass="title" text="Seja bem vindo!" textFill="#1f25c1" AnchorPane.leftAnchor="358.0" AnchorPane.rightAnchor="391.0" AnchorPane.topAnchor="35.0">
+                        <Text fill="#3a2fd3" layoutX="299.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seja bem vindo, colaborador!" textAlignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
-                        </Label>
-                        <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="759.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="124.0" AnchorPane.topAnchor="33.0">
-                           <image>
-                              <Image url="@assets/Usuario.png" />
-                           </image>
-                        </ImageView>
-                        <Group layoutX="316.0" layoutY="193.0" onMouseClicked="#irCadastroCr" AnchorPane.leftAnchor="316.0" AnchorPane.topAnchor="186.0">
-                           <effect>
-                              <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
-                           </effect>
-                        </Group>
-                        <Group layoutX="589.0" layoutY="193.0" onMouseClicked="#irLancamentoHora">
-                           <effect>
-                              <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
-                           </effect>
-                        </Group>
-                        <Group layoutX="41.0" layoutY="335.0" onMouseClicked="#irCadastroCliente">
-                           
-                           <effect>
-                              <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
-                           </effect>
-                        </Group>
-                        <Group layoutX="316.0" layoutY="342.0" onMouseClicked="#irControleCr">
-                           <effect>
-                              <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
-                           </effect>
-                        </Group>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutX="183.0" layoutY="210.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
-                        <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="247.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../assets/Grafico.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="200.0" layoutY="297.0" text="Tela de visualização" textFill="#1f25c1">
-                           <font>
-                              <Font name="Verdana Bold" size="14.0" />
-                           </font>
-                        </Label>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutX="492.0" layoutY="205.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
-                        <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="556.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../assets/Grafico.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="503.0" layoutY="292.0" text="Lançamento de Horas" textFill="#1f25c1">
-                           <font>
-                              <Font name="Verdana Bold" size="14.0" />
-                           </font>
-                        </Label>
-
-
-
+                        </Text>
+                 
                         
                      </children>
                      
