--- a/src/main/java/view/FeedBack/FeedBack.fxml
+++ b/src/main/java/view/FeedBack/FeedBack.fxml
@@ -63,7 +63,7 @@
           <content>
             <AnchorPane id="Content" minHeight="578.0" minWidth="810.0" prefHeight="606.0" prefWidth="870.0" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" centerShape="false" editable="true" layoutY="116.0" prefHeight="401.0" prefWidth="835.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="35.0">
+                        <TableView fx:id="table_lancamento" centerShape="false" editable="true" layoutX="25.0" layoutY="124.0" prefHeight="451.0" prefWidth="766.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="79.0">
                           <columns>
                               <TableColumn fx:id="col_cr" prefWidth="93.6000394821167" styleClass="rp-column" text="CR" />
                             <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
@@ -80,13 +80,13 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Label layoutX="356.0" layoutY="25.0" prefHeight="39.0" prefWidth="124.0" text="FeedBack" textFill="#483fee">
+                        <Label layoutX="273.0" layoutY="24.0" prefHeight="39.0" prefWidth="270.0" text="Aprovação de Horas" textFill="#483fee">
                            <font>
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tfFiltro" layoutX="14.0" layoutY="83.0" prefHeight="19.0" prefWidth="118.0" promptText="Filtro" />
-                        <Button fx:id="bnt_filtro" layoutX="141.0" layoutY="82.0" maxHeight="46.0" minWidth="47.0" mnemonicParsing="false" onAction="#fltrarProjeto" prefHeight="26.0" prefWidth="52.0" styleClass="MYButton1" text="Button" />
+                        <TextField fx:id="tfFiltro" layoutX="25.0" layoutY="78.0" prefHeight="30.0" prefWidth="669.0" promptText="Projeto" styleClass="input-text" />
+                        <Button fx:id="bnt_filtro" layoutX="711.0" layoutY="78.0" maxHeight="31.0" maxWidth="80.0" minWidth="47.0" mnemonicParsing="false" onAction="#fltrarProjeto" prefHeight="26.0" prefWidth="80.0" styleClass="btn-no-restriction" text="Filtrar" />
               </children>
             </AnchorPane>
           </content>
