--- a/src/main/java/view/Menu/MenuUsuario.fxml
+++ b/src/main/java/view/Menu/MenuUsuario.fxml
@@ -66,9 +66,9 @@
                </children></AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0" SplitPane.resizableWithParent="false">
           <content>
-            <AnchorPane id="Content" prefHeight="544.0" prefWidth="921.0" styleClass="content">
+            <AnchorPane id="Content" minWidth="818.0" prefHeight="595.0" prefWidth="818.0" styleClass="content">
               <children>
-                             <Group layoutX="123.0" layoutY="203.0" onMouseClicked="#irLancamentoHora" AnchorPane.leftAnchor="123.0">
+                             <Group layoutX="319.0" layoutY="249.0" onMouseClicked="#irLancamentoHora" AnchorPane.leftAnchor="319.0">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
                               <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
@@ -76,7 +76,7 @@
                                     <Image url="@../assets/Grafico.png" />
                                  </image>
                               </ImageView>
-                              <Label layoutX="18.0" layoutY="76.0" text="Lançamento de hora" textFill="#1f25c1">
+                              <Label layoutX="18.0" layoutY="76.0" text="Lançamento de Hora" textFill="#1f25c1">
                                  <font>
                                     <Font name="Verdana Bold" size="14.0" />
                                  </font>
@@ -86,7 +86,7 @@
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
                            </effect>
                         </Group>
-                        <Text fill="#3a2fd3" layoutX="299.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seja bem vindo, colaborador!" textAlignment="CENTER">
+                        <Text fill="#3a2fd3" layoutX="267.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seja bem vindo, Colaborador!" textAlignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
