--- a/src/main/java/view/Relatorio/Relatorio.fxml
+++ b/src/main/java/view/Relatorio/Relatorio.fxml
@@ -30,6 +30,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -67,13 +68,13 @@
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="comboCR" layoutX="35.0" layoutY="90.0" prefHeight="35.0" prefWidth="114.0" promptText="Data" styleClass="input-text" />
-                        <ComboBox fx:id="comboCR1" layoutX="175.0" layoutY="90.0" prefHeight="35.0" prefWidth="114.0" promptText="Usuário" styleClass="input-text" />
+                        <ComboBox fx:id="comboCR1" layoutX="251.0" layoutY="94.0" prefHeight="35.0" prefWidth="114.0" promptText="Usuário" styleClass="input-text" />
                         <Button layoutX="348.0" layoutY="354.0" maxWidth="170.0" minHeight="30.0" minWidth="135.0" mnemonicParsing="false" onAction="#GerarRelatorio" prefHeight="35.0" prefWidth="147.0" styleClass="btn-no-restriction" text="Gerar Relatório">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
+                        <DatePicker fx:id="dataTime" layoutX="434.0" layoutY="99.0" />
               </children>
             </AnchorPane>
           </content>
