--- a/src/main/java/view/Menu/Menu.fxml
+++ b/src/main/java/view/Menu/Menu.fxml
@@ -83,9 +83,9 @@
                            </effect>
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
-                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="53.0" fitWidth="72.0" layoutX="73.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/Grafico.png" />
+                                    <Image url="@../assets/controle-usuario.png" />
                                  </image>
                               </ImageView>
                               <Label layoutX="14.0" layoutY="83.0" text="Controle de Usuários" textFill="#1f25c1">
@@ -98,9 +98,9 @@
                         <Group layoutX="41.0" layoutY="353.0" onMouseClicked="#irFeedBackHora">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
-                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="52.0" fitWidth="65.0" layoutX="64.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/Grafico.png" />
+                                    <Image url="@../assets/feedback.png" />
                                  </image>
                               </ImageView>
                               <Label layoutX="59.0" layoutY="76.0" text="Feedback" textFill="#1f25c1">
@@ -116,13 +116,13 @@
                         <Group layoutX="589.0" layoutY="186.0" onMouseClicked="#irControleCliente">
                            <children>
                        
-                                          <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
-                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+                                          <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0000ff1f" height="112.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
+                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="69.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/Grafico.png" />
+                                    <Image url="@../assets/controle-cliente.png" />
                                  </image>
                               </ImageView>
-                              <Label layoutX="21.0" layoutY="80.0" text="Controle de Cliente" textFill="#1f25c1">
+                              <Label layoutX="21.0" layoutY="83.0" text="Controle de Cliente" textFill="#1f25c1">
                                  <font>
                                     <Font name="Verdana Bold" size="14.0" />
                                  </font>
@@ -136,9 +136,9 @@
                         <Group layoutX="319.0" layoutY="193.0" onMouseClicked="#irControleCr">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
-                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="69.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/Grafico.png" />
+                                    <Image url="@../assets/controle-cr.png" />
                                  </image>
                               </ImageView>
                               <Label layoutX="34.0" layoutY="76.0" text="Controle de CRs" textFill="#1f25c1">
@@ -154,9 +154,9 @@
                         <Group layoutX="319.0" layoutY="353.0" onMouseClicked="#irParametrizacao">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
-                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="69.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/Grafico.png" />
+                                    <Image url="@../assets/parametrizacao.png" />
                                  </image>
                               </ImageView>
                               <Label layoutX="34.0" layoutY="76.0" text="Parametrização" textFill="#1f25c1">
